# swagger.yaml
@@ -109,6 +109,21 @@ paths:
                   - $ref: '#/components/schemas/MetadataObjectPropertyEntry'
         '404':
           description: Metadata object or property not found
+  /metadata/query:
+    post:
+      summary: Get a list of metadata objects with their properties narrowed down to only those specified by properties. If no list of properties is provided, a list of full metadata objects is retrieved
+      operationId: metadata-query
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MetadataQuery'
+        required: true
+      responses:
+        '200':
+          description: Query results retrieved
+        '500':
+          description: Server unavailable
 components:
   schemas:
     Healthcheck:
@@ -304,6 +319,21 @@ components:
                   format: base16
                   minLength: 128
                   maxLength: 128
+    MetadataQuery:
+      type: object
+      additionalProperties: false
+      required: ['subjects']
+      properties:
+        subjects:
+          type: array
+          minItems: 1
+          items:
+            type: string
+        properties:
+          type: array
+          minItems: 1
+          items:
+            type: string
     MetadataCreationBody:
       type: object
       required: ['subject']
